# multi-party-signature

./: Cargo.toml
multi-party-ecdsa/: Cargo.toml
multi-party-ecdsa/examples/: combine_gg20_shares.rs  gg20_keygen.rs  gg20_signing.rs  gg20_sm_client.rs  gg20_sm_manager.rs
multi-party-ecdsa/src/protocols/multi_party_ecdsa/gg_2018/: test.rs
multi-party-ecdsa/src/protocols/multi_party_ecdsa/gg_2020/: test.rs
